--- a/core/templates/core/chat.html
+++ b/core/templates/core/chat.html
@@ -2,6 +2,12 @@
 {% block content %}
 <script type="application/json" id="json_room_id">{{ room.id }}</script>
 
+<form id="form">
+    <input type="text" name="message"/>
+    <button type="submit">send</button>
+</form>
+
+<div id="messages"></div>
 <script type="text/javascript">
     
     const room_id = JSON.parse(document.getElementById('json_room_id').textContent);
@@ -9,9 +15,27 @@
 
     chatSocket = new WebSocket(url)
 
+    //when message is received from server
     chatSocket.onmessage = function(e){
         let data = JSON.parse(e.data)
-        console.log("data: ", data)
+        if(data.type === "chat"){
+        let messages = document.getElementById("messages")
+        messages.insertAdjacentHTML("beforeend", `<div>
+            ${data.message}
+            </div>`)
     }
+    }
+
+    let form = document.getElementById("form")
+    //action to take when form is submitted
+    form.addEventListener("submit", (e) => {
+        e.preventDefault()
+        let message = e.target.message.value
+        chatSocket.send(JSON.stringify({
+            "type" : "chat_message_sent",
+            "message" : message
+        }))
+        form.reset()
+    })
 </script>
 {% endblock %}
