--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -18,12 +18,32 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'home'%}">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
               </li>
             </ul>
+            
+            {% if user.is_authenticated %}
+    <ul class="navbar-nav"> 
+        <li class="nav-item">
+            <div class="card" style="width: 200px; margin-left: 20px;">
+                <div class="card-body">
+                    <h5 class="card-title">Welcome, {{ user.username }}!</h5>
+                    <p class="card-text">You are logged in.</p>
+                    <form action="#" method="post" style="display: inline;">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-danger">Logout</button>
+                    </form>
+                </div>
+            </div>
+        </li>
+    </ul>
+
+
+        {% else %}
+        
             <ul class="navbar-nav"> 
               <li class="nav-item">
                 <a class="nav-link" href="#">Login</a>
@@ -32,6 +52,7 @@
                 <a class="nav-link" href="#">Register</a>
               </li>
             </ul>
+            {% endif %}
           </div>
         </div>
       </nav>
