--- a/core/templates/core/createroom.html
+++ b/core/templates/core/createroom.html
@@ -1,5 +1,15 @@
 {% extends "core/base.html" %}
 {% block content %} 
+{% if messages %}
+    <div class="messages">
+        {% for message in messages %}
+            <div class="alert alert-danger" role="alert">
+                {{ message }}
+            </div>
+        {% endfor %}
+    </div>
+{% endif %}
+
 <form action="{% url 'create_room' %}" method="post"> {% csrf_token %}
     <input type="text" id="smallTextInput" name="roomname" maxlength="20" placeholder="room name" required>
     <button type="submit"> Create </button>
