--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -32,7 +32,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Welcome, {{ user.username }}!</h5>
                     <p class="card-text">You are logged in.</p>
-                    <form action="#" method="post" style="display: inline;">
+                    <form action="{% url 'logout' %}" method="post" style="display: inline;">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-danger">Logout</button>
                     </form>
@@ -46,10 +46,10 @@
         
             <ul class="navbar-nav"> 
               <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Register</a>
+                <a class="nav-link" href="{% url 'register'%}">Register</a>
               </li>
             </ul>
             {% endif %}
