--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -34,34 +34,40 @@
             font-size: 1.5em; 
         }
 
+        .room-creator {
+            font-size: 0.9em;
+            color: #666;
+            margin-bottom: 10px;
+        }
+
         .join-button {
             display: inline-block;
             padding: 10px 15px;
-            background-color: #007bff; /* Blue color for join button */
+            background-color: #007bff; 
             color: white;
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s;
-            margin-top: 10px; /* Add some spacing above */
+            margin-top: 10px;
         }
 
         .join-button:hover {
-            background-color: #0056b3; /* Darker shade for hover effect */
+            background-color: #0056b3;
         }
 
         .delete-button {
             display: inline-block;
             padding: 10px 15px;
-            background-color: #dc3545; /* Red color for delete button */
+            background-color: #dc3545; 
             color: white;
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s;
-            margin-top: 10px; /* Add some spacing above */
+            margin-top: 10px;
         }
 
         .delete-button:hover {
-            background-color: #c82333; /* Darker shade for hover effect */
+            background-color: #c82333; 
         }
 
         .create-room-button {
@@ -87,6 +93,7 @@
         {% for r in rooms %}
         <div class="chatroom-card">
             <h2 class="room-name">{{ r.name }}</h2>
+            <p class="room-creator">Created by: {{ r.creator.username }}</p> <!-- Display the creator's username -->
             <a href="{% url 'join_room' r.id %}" class="join-button">Join</a>
             {% if r.creator == user %}
                 <form action="{%url 'delete_room' r.id%}" method="post" style="display: inline;">
@@ -96,5 +103,23 @@
             {% endif %}
         </div>
         {% endfor %}
+    </div>
+
+    <div class="pagination">
+        <span class="step-links">
+            {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            {% endif %}
+    
+            <span class="current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            </span>
+    
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
     </div>
 {% endblock %}
